# c_spirit_Gemini_2_5_Pro_functionalities

./: Gemini_2_5_Pro_plan.md  Gemini_2_5_Pro_tickets.md  pyproject.toml  requirements.txt
aim2/: __init__.py  config.py
aim2/corpus/: __init__.py
aim2/extraction/: __init__.py
aim2/ontology/: __init__.py  manager.py  schema.py
aim2/postprocessing/: __init__.py
config/: config.yml
docs/: checklist.md  checklist_bk_August_4th_2-25.md  new_checklist.md
tests/: test_config.py  test_corpus.py  test_extraction.py  test_ontology.py  test_postprocessing.py  test_project_setup.py
tests/corpus/: test_builder.py
tests/extraction/: test_llm_interface.py
tests/ontology/: test_manager.py  test_schema.py
tests/postprocessing/: test_mapper.py
